--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
       <section id="skills">
         <h2 class="skills__title">&lt;Skill/&gt;</h2>
         <div class="skills__container">
-          <img class="skills__image hcj" src="/images/HJC.png" alt="" />
-          <img class="skills__image react" src="/images/react.png" alt="" />
-          <img class="skills__image redux" src="/images/redux.png" alt="" />
+          <img class="skills__image hcj" src="./images/HJC.png" alt="" />
+          <img class="skills__image react" src="./images/react.png" alt="" />
+          <img class="skills__image redux" src="./images/redux.png" alt="" />
         </div>
       </section>
       <section id="project">
