--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <section id="skills">
         <h2 class="skills__title">&lt;Skill/&gt;</h2>
         <div class="skills__container">
-          <img class="skills__image hcj" src="./images/HJC.png" alt="" />
+          <img class="skills__image hcj" src="./images/hjc.png" alt="" />
           <img class="skills__image react" src="./images/react.png" alt="" />
           <img class="skills__image redux" src="./images/redux.png" alt="" />
         </div>
@@ -140,16 +140,22 @@
               </div>
             </div>
           </div>
-          <div class="project__container" data-type="javascript">
+          <div class="project__container registnaver" data-type="javascript">
             <div class="project__description">
-              <h3>Not Update</h3>
+              <h3>Naver Register</h3>
               <div class="description__divide"></div>
-              <span>......</span>
+              <span>네이버 회원가입 클론</span>
               <div class="description__links">
-                <a href="#">
+                <a
+                  href="https://yeonahlee.github.io/portfolio/naverUI"
+                  target="blank"
+                >
                   <img class="link__image" src="/images/weblink.png" alt="" />
                 </a>
-                <a href="#">
+                <a
+                  href="https://github.com/yeonahlee/portfolio/tree/main/naverUI"
+                  target="blank"
+                >
                   <i class="fab fa-github"></i>
                 </a>
                 <a href="#" target="_blank">
