--- a/index.html
+++ b/index.html
@@ -134,7 +134,10 @@
                 <a href="#">
                   <img class="link__image" src="/images/weblink.png" alt="" />
                 </a>
-                <a href="https://yeonahlee.github.io/portfolio/" target="blank">
+                <a
+                  href="https://github.com/yeonahlee/portfolio/"
+                  target="blank"
+                >
                   <i class="fab fa-github"></i>
                 </a>
               </div>
@@ -146,20 +149,14 @@
               <div class="description__divide"></div>
               <span>네이버 회원가입 클론</span>
               <div class="description__links">
-                <a
-                  href="https://yeonahlee.github.io/portfolio/naverUI"
-                  target="blank"
-                >
+                <a href="/naverUI" target="blank">
                   <img class="link__image" src="/images/weblink.png" alt="" />
                 </a>
                 <a
-                  href="https://github.com/yeonahlee/portfolio/tree/main/naverUI"
+                  href="https://github.com/yeonahlee/portfolio/naverUI"
                   target="blank"
                 >
                   <i class="fab fa-github"></i>
-                </a>
-                <a href="#" target="_blank">
-                  <i class="far fa-list-alt"></i>
                 </a>
               </div>
             </div>
