--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <span>포트폴리오 사이트 제작</span>
               <div class="description__links">
                 <a href="#">
-                  <img class="link__image" src="/images/weblink.png" alt="" />
+                  <img class="link__image" src="./images/weblink.png" alt="" />
                 </a>
                 <a
                   href="https://github.com/yeonahlee/portfolio/"
@@ -150,7 +150,7 @@
               <span>네이버 회원가입 클론</span>
               <div class="description__links">
                 <a href="/naverUI" target="blank">
-                  <img class="link__image" src="/images/weblink.png" alt="" />
+                  <img class="link__image" src="./images/weblink.png" alt="" />
                 </a>
                 <a
                   href="https://github.com/yeonahlee/portfolio/tree/main/naverUI"
@@ -168,7 +168,7 @@
               <span>......</span>
               <div class="description__links">
                 <a href="#">
-                  <img class="link__image" src="/images/weblink.png" alt="" />
+                  <img class="link__image" src="./images/weblink.png" alt="" />
                 </a>
                 <a href="#">
                   <i class="fab fa-github"></i>
@@ -186,7 +186,7 @@
               <span>......</span>
               <div class="description__links">
                 <a href="#">
-                  <img class="link__image" src="/images/weblink.png" alt="" />
+                  <img class="link__image" src="./images/weblink.png" alt="" />
                 </a>
                 <a href="#">
                   <i class="fab fa-github"></i>
@@ -204,7 +204,7 @@
               <span>......</span>
               <div class="description__links">
                 <a href="#">
-                  <img class="link__image" src="/images/weblink.png" alt="" />
+                  <img class="link__image" src="./images/weblink.png" alt="" />
                 </a>
                 <a href="#">
                   <i class="fab fa-github"></i>
@@ -222,7 +222,7 @@
               <span>......</span>
               <div class="description__links">
                 <a href="#">
-                  <img class="link__image" src="/images/weblink.png" alt="" />
+                  <img class="link__image" src="./images/weblink.png" alt="" />
                 </a>
                 <a href="#">
                   <i class="fab fa-github"></i>
@@ -240,7 +240,7 @@
               <span>......</span>
               <div class="description__links">
                 <a href="#">
-                  <img class="link__image" src="/images/weblink.png" alt="" />
+                  <img class="link__image" src="./images/weblink.png" alt="" />
                 </a>
                 <a href="#">
                   <i class="fab fa-github"></i>
@@ -258,7 +258,7 @@
               <span>......</span>
               <div class="description__links">
                 <a href="#">
-                  <img class="link__image" src="/images/weblink.png" alt="" />
+                  <img class="link__image" src="./images/weblink.png" alt="" />
                 </a>
                 <a href="#">
                   <i class="fab fa-github"></i>
@@ -276,7 +276,7 @@
               <span>......</span>
               <div class="description__links">
                 <a href="#">
-                  <img class="link__image" src="/images/weblink.png" alt="" />
+                  <img class="link__image" src="./images/weblink.png" alt="" />
                 </a>
                 <a href="#">
                   <i class="fab fa-github"></i>
@@ -294,7 +294,7 @@
               <span>......</span>
               <div class="description__links">
                 <a href="#">
-                  <img class="link__image" src="/images/weblink.png" alt="" />
+                  <img class="link__image" src="./images/weblink.png" alt="" />
                 </a>
                 <a href="#">
                   <i class="fab fa-github"></i>
@@ -312,7 +312,7 @@
               <span>......</span>
               <div class="description__links">
                 <a href="#">
-                  <img class="link__image" src="/images/weblink.png" alt="" />
+                  <img class="link__image" src="./images/weblink.png" alt="" />
                 </a>
                 <a href="#">
                   <i class="fab fa-github"></i>
@@ -330,7 +330,7 @@
               <span>......</span>
               <div class="description__links">
                 <a href="#">
-                  <img class="link__image" src="/images/weblink.png" alt="" />
+                  <img class="link__image" src="./images/weblink.png" alt="" />
                 </a>
                 <a href="#">
                   <i class="fab fa-github"></i>
