--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               <div class="description__divide"></div>
               <span>네이버 회원가입 클론</span>
               <div class="description__links">
-                <a href="/naverUI" target="blank">
+                <a href="./naverUI" target="blank">
                   <img class="link__image" src="./images/weblink.png" alt="" />
                 </a>
                 <a
